<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/big"
                android:layout_marginTop="@dimen/big"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/medium"
                    android:orientation="vertical"
                    android:padding="@dimen/large">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/medium"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_drawable"
                        android:layout_marginBottom="@dimen/medium">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/etPassword"
                            style="@style/styleEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:layout_marginBottom="@dimen/medium"
                            android:layout_toLeftOf="@+id/ivEye"
                            android:background="@null"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword" />

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@id/ivEye"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/medium"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/eye" />
                    </RelativeLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvForgotPassword"
                        style="@style/styleTextViewMedium"
                        android:layout_gravity="right"
                        android:layout_marginBottom="@dimen/medium"
                        android:text="@string/forgot_your_password" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/ivLoginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/login_button" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/large"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/TextRegularSizeSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_no_account"
                        android:textColor="@color/lightGray" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvRegister"
                        style="@style/TextRegularSizeRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/small"
                        android:text="@string/login_register"
                        android:textColor="@color/white" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
